--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,19 +1,28 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "server.js"
-      }
-    ],
-    "env": {
-      "MONGO_URI": "mongodb+srv://sharkzturco:zK7F7nI3k9otgh3M@cluster0.kudgc.mongodb.net/zurpackdb",
-      "NODE_ENV": "production"
+  "version": 2,
+  "builds": [
+    {
+      "src": "server.js",
+      "use": "@vercel/node"
     }
+  ],
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "server.js" }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://zurpackweb.vercel.app" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
+      ]
+    }
+  ],
+  "env": {
+    "MONGO_URI": "mongodb+srv://sharkzturco:zK7F7nI3k9otgh3M@cluster0.kudgc.mongodb.net/zurpackdb",
+    "NODE_ENV": "production",
+    "FRONTEND_URL": "https://zurpackweb.vercel.app"
   }
+}
