--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,23 +6,28 @@
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "server.js" }
-  ],
-  "headers": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://zurpackweb.vercel.app" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization" }
-      ]
+      "src": "/api/health",
+      "dest": "server.js"
+    },
+    {
+      "src": "/api/auth/(.*)",
+      "dest": "server.js"
+    },
+    {
+      "src": "/api/(.*)",
+      "headers": {
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Allow-Origin": "https://zurpackweb.vercel.app",
+        "Access-Control-Allow-Methods": "GET,OPTIONS,PATCH,DELETE,POST,PUT",
+        "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization, X-API-Key"
+      },
+      "continue": true
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "server.js"
     }
-  ],
-  "env": {
-    "MONGO_URI": "mongodb+srv://sharkzturco:zK7F7nI3k9otgh3M@cluster0.kudgc.mongodb.net/zurpackdb",
-    "NODE_ENV": "production",
-    "FRONTEND_URL": "https://zurpackweb.vercel.app"
-  }
+  ]
 }
